# Flight-Scanner

./: .gitignore  CMakeLists.txt  README  gitignore
lib/: AirportFlights.cpp  Functions.cpp
src/: child_process.cpp  child_process.h  main.cpp  parent_process.cpp  parent_process.h  program_manager.cpp  program_manager.h  programs.cpp  programs.h
